syntax = "proto3";
option csharp_namespace = "PresalesApp.Service";
package bridge;

import "enums.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service Api {
	rpc SayHello (HelloRequest) returns (HelloReply);
	rpc SetProjectFunnelStage(NewProjectFunnelStage) returns (IsActionSuccess);
	
	rpc GetPresalesArrival(google.protobuf.Empty) returns (stream Arrival);
}

message Arrival {
	string name = 1;
	google.protobuf.Timestamp timestamp = 2;
	string image_bytes = 3;
}

message NewProjectFunnelStage {
	string project_number = 1;
	enums.FunnelStage new_stage = 2;
}

message IsActionSuccess {
	bool is_success = 1;
	string error_message = 2;
}

message HelloRequest {
	string name = 1;
}

message HelloReply {
	string message = 1;
}
